projects/vb6parse/snapshots/parsers/cst/module_options/option_statements/option_private_case_insensitive.snap
---
source: projects/vb6parse/tests/module_options/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: OPTION
        - kind: Whitespace
          text: " "
        - kind: PrivateKeyword
          text: PRIVATE
        - kind: Whitespace
          text: " "
        - kind: ModuleKeyword
          text: MODULE
        - kind: Newline
          text: "\n"
