projects/vb6parse/snapshots/parsers/cst/module_options/option_statements/option_private_in_standard_module.snap
---
source: projects/vb6parse/tests/module_options/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AttributeStatement
      children:
        - kind: AttributeKeyword
          text: Attribute
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: VB_Name
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Module1\""
        - kind: Newline
          text: "\n"
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: ModuleKeyword
          text: Module
        - kind: Newline
          text: "\n"
